[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "who-osint"
version = "0.1.0"
description = "WHO — OSINT investigation CLI (calls the WHO HTTP API)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "WHO Team" }]
keywords = ["osint", "cli", "investigation", "who"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "httpx>=0.27.0",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
who = "who_cli.main:app"

[project.urls]
Homepage = "https://github.com/who-osint/who"
Issues = "https://github.com/who-osint/who/issues"

[tool.hatch.build.targets.wheel]
packages = ["who_cli"]
